# bootcamp_python_de

./: README.md
aula_01/: README.md  desafio_01.py  exemplo.py
aula_02/: README.md  desafio.py  exercicios.py
aula_03/: README.md  desafio.py  exercicios.py
aula_04/: README.md  desafio.py  exercicios.py
aula_05/: README.md  pyproject.toml
aula_06/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
aula_07/: README.md  desafio.py  etl.py  etl_pydantic.py  etl_type_hint.py  exemplo_00.py  exercicios.py
aula_07/data/: vendas.csv
aula_08/: README.md  dados.csv  etl.py  pipeline.py  pyproject.toml
aula_08/data/: coleta_dia02.json
aula_09/: README.md  etl.py  exemplo_00.py  hello.py  log.py  main.py  pipeline.py  pyproject.toml  singleton_decorator.py  tenacity_decorator.py  timer.py
aula_09/data/: coleta_dia01.json  coleta_dia02.json  coleta_dia03.json
aula_10/: README.md
aula_11/: README.md
aula_12/: README.md  csv_class.py  csv_test.py  exemplo.csv  exemplo2.csv  usar_class.py
aula_13/: README.md  pyproject.toml
aula_13/data/txt_files/: test.txt
aula_13/json_files/: 1.json
aula_13/src/: __main__.py
aula_13/src/lib/classes/: AbstractDataSource.py  CsvSource.py  FilesSources.py  JsonSource.py  TxtSource.py
aula_13/src/lib/classes/aws/: s3.py
aula_14/: README.md
aula_15/: README.md
aula_15/Collector/: main.py
aula_15/Collector/contracts/: schema.py
aula_15/Collector/datasource/: api.py
aula_15/Collector/tools/: retry.py
aula_15/Collector/tools/aws/: client.py
aula_15/FakeApi/: start.py
aula_16/: README.md  create.py  database.db  pyproject.toml  read.py
aula_16/planejado/: exemplo_00_dict.py  exemplo_01_classe.py  exemplo_02_dataclasse.py  exemplo_03_classe_com_validador.py  exemplo_04_dataclasse_com_validador.py  exemplo_05_pydantic.py  exemplo_07_sql_model.py
aula_17/: README.md  desafio.db  desafio.py  desafio_query.py  exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  meubanco.db  pyproject.toml
aula_18/: README.md  exemplo_00.py  exemplo_01.py  exemplo_02_json.py  json_exemplo.py  pyproject.toml
aula_18/src/: controller.py  db.py  main.py  models.py  pokemon.db  schema.py
aula_19/: Dockerfile  README.md  pyproject.toml
aula_19/src/: database.py  main.py  models.py  schema.py
aula_20/: README.md  docker-compose.yaml  pyproject.toml
aula_20/backend/: database.py  router.py
