[tool.poetry]
name = "aula-05"
version = "0.1.0"
description = ""
authors = ["Rafael Panegassi <70807807+rafaelpanegassi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.20.21"
duckdb = "^0.10.2"
pandas = "^2.2.2"
dask = "^2024.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
