[tool.poetry]
name = "aula-17"
version = "0.1.0"
description = ""
authors = ["Rafael Panegassi <70807807+rafaelpanegassi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
