[tool.poetry]
name = "aula-20"
version = "0.1.0"
description = ""
authors = ["Rafael Panegassi <70807807+rafaelpanegassi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
streamlit = "^1.35.0"
fastapi = "^0.111.0"
pydantic = "^2.7.2"
uvicorn = "^0.30.1"
email-validator = "^2.1.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
